NetBSD Problem Report #40712

From martin@aprisoft.de  Sun Feb 22 11:25:51 2009
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 4D4E763B8C3
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 22 Feb 2009 11:25:51 +0000 (UTC)
Message-Id: <20090222112543.1F8E5AF5826@emmas.aprisoft.de>
Date: Sun, 22 Feb 2009 12:25:43 +0100 (CET)
From: martin@duskweare.de
Reply-To: martin@duskware.de
To: gnats-bugs@gnats.NetBSD.org
Subject: ddb auto-advance broken
X-Send-Pr-Version: 3.95

>Number:         40712
>Category:       kern
>Synopsis:       ddb auto-advance broken
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Feb 22 11:30:00 +0000 2009
>Closed-Date:    Sun Mar 01 12:20:49 +0000 2009
>Last-Modified:  Sun Mar 01 12:20:49 +0000 2009
>Originator:     Martin Husemann
>Release:        NetBSD 5.99.7
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD martins.aprisoft.de 5.99.7 NetBSD 5.99.7 (MARTINS) #37: Sun Feb 22 12:22:35 CET 2009 martin@martins.aprisoft.de:/usr/src/sys/arch/amd64/compile/MARTINS amd64
Architecture: x86_64
Machine: amd64
>Description:

Ddb used to auto advance the current address and repeat commands if you
just pressed enter. This does not work any more.

>How-To-Repeat:

Drop into ddb, disassemble some function, press enter:

db> x/i proc_getspecific
(one line of assembler output)
db>
(nothing)
db>

>Fix:
yes, please.

>Release-Note:

>Audit-Trail:
From: Adam Hamsik <haad@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40712 CVS commit: src/sys/ddb
Date: Sun, 1 Mar 2009 12:13:13 +0000

 Module Name:	src
 Committed By:	haad
 Date:		Sun Mar  1 12:13:13 UTC 2009

 Modified Files:
 	src/sys/ddb: db_command.c

 Log Message:
 Do not set last_count to zero after every db_command function call it is
 static variable. This should fix PR 40712.


 To generate a diff of this commit:
 cvs rdiff -u -r1.127 -r1.128 src/sys/ddb/db_command.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: haad@NetBSD.org
State-Changed-When: Sun, 01 Mar 2009 12:20:49 +0000
State-Changed-Why:
Problem was fixed in a 1.128 version of db_command.c file.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.