Do not set last_count to zero after every db_command function call it is static variable. This should fix PR 40712.